<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Split Tip Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="total_bill">Enter Total Bill</string>
    <string name="total_tip">Total Tip</string>
    <string name="custom_tip">Enter Tip Percentage</string>
    <string name="fifteen_per">15%</string>
    <string name="ten_per">10%</string>
    <string name="twenty_per">20%</string>
    <string name="num_split">Enter Split Number</string>
    <string name="total_split">Split per person</string>

</resources>
