<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SplitTipActivity"
    android:id="@+id/rlSplitTip">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etTotalBill"
            android:autoText="false"
            android:text="@string/total_bill"
            android:layout_marginTop="10dp">

            <requestFocus />
        </EditText>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etCustomizeTip"
            android:autoText="false"
            android:text="@string/custom_tip"
            android:layout_marginTop="10dp">

        <requestFocus />
        </EditText>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten_per"
                android:id="@+id/btnTen"
                android:layout_gravity="center"
                android:onClick="calculateTip"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifteen_per"
                android:id="@+id/btnFifteen"
                android:layout_gravity="center"
                android:onClick="calculateTip"/>


            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twenty_per"
                android:id="@+id/btnTwenty"
                android:layout_gravity="center"
                android:onClick="calculateTip"/>


        </LinearLayout>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etSplitNumber"
            android:hint="@string/num_split"
            android:layout_marginTop="10dp"
            android:text="@string/num_split"
            android:inputType="number">

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/total_tip"
            android:id="@+id/tvTotalTip"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/total_split"
            android:id="@+id/tvTotalSplit"
            android:layout_marginTop="10dp" />


    </LinearLayout>

</RelativeLayout>
